--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,14 @@ body {
   margin: 0;
   font-family: "Poppins", sans-serif;
   color: white;
-  background-color: #22254b;
+  background: #0f2027; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #2c5364, #203a43, #0f2027); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .root {
@@ -22,7 +29,7 @@ body {
 }
 
 header {
-  background-color: #373b69;
+  background-color: #203a43;
   padding: 1rem;
   display: flex;
   justify-content: flex-end;
@@ -30,7 +37,7 @@ header {
 
 .search {
   background-color: transparent;
-  border: 2px solid #22254b;
+  border: 2px solid #0f2027;
   border-radius: 50px;
   color: #fff;
   font-family: inherit;
@@ -38,15 +45,15 @@ header {
   padding: 0.5rem 1rem;
 }
 .search::placeholder {
-  color: #7378c5;
+  color: #4b859e;
 }
 .search:focus {
-  background-color: #22254b;
+  background-color: #203a43;
   outline: none;
 }
 
 .movie {
-  background-color: #373b69;
+  background-color: #203a43;
   width: 300px;
   margin: 1rem;
   border-radius: 3px;
@@ -103,7 +110,7 @@ header {
 }
 
 .tag {
-  background-color: #22254b;
+  background-color: #0f2027;
   border-radius: 5px;
   padding: 0.5rem;
   font-size: bold;
